test/testdata/classes/methods/instance/invalid_binary_op_error.lox
class Foo {
  bar() {}
}
Foo().bar - 1; // error: '-' operator cannot be used with types 'function' and 'number'
